--- a/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
+++ b/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
@@ -1,19 +1,15 @@
 <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
 <link href='{{ STATIC_URL }}fullcalendar/css/fullcalendar.css' rel='stylesheet' />
-<link href='{{ STATIC_URL }}fullcalendar/css/fullcalendar.print.css' rel='stylesheet' media='print' />
 <link href='{{ STATIC_URL }}fullcalendar/tags/jquery.tagsinput.css' rel='stylesheet'  />
 <link href='{{ STATIC_URL }}fullcalendar/js/jquery-ui-1.8.13.css' rel='stylesheet'  />
 <script src='{{ STATIC_URL }}fullcalendar/js/jquery-1.8.13.min.js'></script>
 <script src='{{ STATIC_URL }}fullcalendar/js/jquery-ui-1.8.13.min.js'></script>
-<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" ></script>
 <script src='{{ STATIC_URL }}fullcalendar/js/jquery-ui-timepicker-addon.js'></script>
 <script src='{{ STATIC_URL }}fullcalendar/js/fullcalendar.min.js'></script>
 <script src='{{ STATIC_URL }}fullcalendar/tags/jquery.tagsinput.js'></script>
 <script src="{{ STATIC_URL }}fullcalendar/staffevent.js" ></script>
 
 <style>
-	
 	.btn-group {
 		position: relative;
 		display: inline-block;
@@ -137,116 +133,54 @@
 		width:318px;
 	}
 	
+	div.tagsinput input{
+		list-style:none;
+		border: 1px solid #CCC;
+		outline: 0;
+		outline: thin dotted 9;
+		-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+		-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+	}
+	
+	ul li{
+		list-style-type: none;
+	}
+	
 	.event-bottom{
 		text-align:center;
 	}
+
 	
 </style>
-		<!--  
-		<div class="left-nav">
-			<div class="left-nav-search">
-				<div class="input-append">
-				  <input class="span2" id="appendedDropdownButton" type="text" placeholder="输入事件描述">
-				  <div class="btn-group">
-				    <button id="master_btn" class="btn dropdown-toggle" data-toggle="dropdown">
-				     {{ object.curuser.username }}
-				      <span class="caret"></span>
-				    </button>
-				    <ul class="dropdown-menu">
-				      {% for u in object.staffs %}
-				      	<li>{{ u.username }}</li>
-				      {% endfor %}
-				    </ul>
-				  </div>
-				</div>
-				<div class="search-filter">
-					<div class="filter-line">
-						<label for="id_date_type">日期类型:</label>
-						<select id="id_date_type" class="selector">
-							<option value="task">任务日期</option>
-							<option value="create">创建日期</option>
-							<option value="modify">修改日期</option>
-						</select>
-						<input id="id_result_order" type="checkbox" />
-						<label for="id_result_order" >降序</label> 
-					</div>
-					<div class="filter-line">
-						<input id="id_start_dt" type="text" placeholder="开始日期"/>
-						<input id="id_end_dt" type="text" placeholder="结束日期"/>
-					</div>
-				</div>
+	<div class="right-panel">
+		<div id='calendar'></div>
+		<div id="add_staff_event" class="add_staff_event draggable " >
+			<div class="staff-head">
+				<h4 style="color:white;padding:2px;">填写事件信息</h4>
 			</div>
-			<div class="search-results">
-				<div class="tabbable" > 
-				  <ul class="nav nav-tabs" style="margin-bottom:0px;">
-				    <li class="active"><a href="#tab1" data-toggle="tab">全部</a></li>
-				    <li><a href="#tab2" data-toggle="tab">未完成</a></li>
-				    <li><a href="#tab3" data-toggle="tab">已完成</a></li>
-				  </ul>
+			<div class="staff-body">
+				<div class="control-group executors">
+					<input id="executors" name="executors" type="text" value=""  />
 				</div>
-				<div class="tab-content">
-					<div class="tab-pane search-result-events active" id="tab1">
-						<div class="label label-info event-label">
-							<label class="badge badge-inverse">1</label>
-							事件一，事件一，事件一，事件一，事件一，事件一，事件一，事件一
-						</div>
-						<div class="label label-info event-label">
-							<label class="badge badge-inverse">2</label>
-							事件一，事件一，事件一，事件一，事件一，事件一，事件一，事件一
-						</div>
-						<div class="label label-info event-label">
-							<label class="badge badge-inverse">3</label>
-							事件一，事件一，事件一，事件一，事件一，事件一，事件一，事件一
-						</div>
-					</div>
-					<div class="tab-pane search-result-events" id="tab2">
-						<div class="label label-info event-label">
-							<label class="badge badge-inverse">1</label>
-							完成事件，完成事件，完成事件，完成事件，完成事件，完成事件
-						</div>
-						<div class="label label-info event-label">
-							<label class="badge badge-inverse">2</label>
-							完成事件，完成事件，完成事件，完成事件，完成事件，完成事件
-						</div>
-					</div>
-					<div class="tab-pane search-result-events" id="tab3">
-						<div class="label label-info event-label">
-							<label class="badge badge-inverse">1</label>
-							未完成事件，未完成事件，未完成事件，未完成事件，未完成事件
-						</div>
-					</div>
+				<div class="control-group">
+					<input id="start-datetime" class="event-datetime" type='text' placeholder="最早执行时间" />
+					<lable class="label">to</lable>
+					<input id="end-datetime" class="event-datetime" type='text' placeholder="最晚完成时间" />
 				</div>
-			</div>
-		</div>
-		-->
-		<div class="right-panel">
-			<div id='calendar'></div>
-			<div id="add_staff_event" class="add_staff_event draggable " >
-				<div class="staff-head">
-					<h4 style="color:white;padding:2px;">填写事件信息</h4>
+				<div class="control-group">
+					<div class="controls"><textarea id="event-content" rows="3" cols="50" placeholder="描述规范：开头用14字以内写任务标题，然后再写任务内容" ></textarea></div>
 				</div>
-				<div class="staff-body">
-					<div class="control-group">
-						<input id="executors" name="executors" type="text" value="{{ object.curuser.username }},"  />
-					</div>
-					<div class="control-group">
-						<input id="start-datetime" class="event-datetime" type='text' placeholder="最早执行时间" />
-						<lable class="label">to</lable>
-						<input id="end-datetime" class="event-datetime" type='text' placeholder="最晚完成时间" />
-					</div>
-					<div class="control-group">
-						<div class="controls"><textarea id="event-content" rows="3" cols="50" placeholder="描述规范：开头用14字以内写任务标题，然后再写任务内容" ></textarea></div>
-					</div>
-					<div class="control-group event-bottom">
-						<button id="btn-submit" class="btn btn-small btn-inverse">提交</button>
-						<button id="btn-cancle" class="btn btn-small btn-inverse">取消</button>
-					</div>
+				<div class="control-group event-bottom">
+					<button id="btn-submit" class="btn btn-small btn-inverse">提交</button>
+					<button id="btn-cancle" class="btn btn-small btn-inverse">取消</button>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript">
-		
+</div>
+<script type="text/javascript">
+	
 	//初始化日历事件对象
 	var initial_calendar_events = function(calendar){
 	
@@ -256,7 +190,7 @@
 		var params = {'df':$.datepicker.formatDate('yy-mm-dd 00:00:01',now)};
 		
 		var callback = function(data){
-
+	
 			if (data.code==1){
 				alert('数据初始化失败');
 				return;
@@ -264,7 +198,7 @@
 			$.each(data.response_content, function(index, e) {
 		         var event = {
 		         	'id':e.id,
-		         	'title':e.title,
+		         	'title':e.title+(e.is_finished?' √':''),
 		         	'start':e.start,
 		         	'end':e.end,
 		         	'allDay':true,
@@ -318,21 +252,22 @@
 				if (latestClickDiv){
 					latestClickDiv.css('background-color', 'white');
 				}
-				
-                $(this).css('background-color', 'pink');
+	            $(this).css('background-color', 'pink');
 				$("#start-datetime").datetimepicker('setDate', (date))
 				var pos = {'x':jsEvent.clientX,'y':jsEvent.clientY}
-        		showStaffEventAddDialog(pos);
+	       		showStaffEventAddDialog(pos);
 				
 				latestClickDiv = $(this);
-    		},
-    		eventClick: function(calEvent, jsEvent, view) {
-        		$(this).css('border-color', 'red');
-    		},
-    		viewDisplay: function(view){
-    			$('#add_staff_event').hide();
-    		},
-    		
+	   		},
+	   		eventClick: function(calEvent, jsEvent, view) {
+	       		$('#add_staff_event').hide();
+	       		$(this).css('border-color', 'red');
+	       		
+	   		},
+	   		viewDisplay: function(view){
+	   			$('#add_staff_event').hide();
+	   		},
+	   		
 		});
 		initial_calendar_events(calendar);
 		
@@ -340,7 +275,7 @@
 	//使输入的执行标记化
 	$('#executors').tagsInput({
 		'autocomplete_url': '/users/username/',
-  		'autocomplete': {selectFirst:true, width:'100px',autoFill:true},
+	    'autocomplete': {selectFirst:true,autoFill:true},
 		'height':'100px',
 		'width':'260px',
 		'interactive':true,
@@ -348,19 +283,19 @@
 		'placeholderColor' : '#999999',
 		'removeWithBackspace' : true,
 	    'minChars' : 1,
-	    'maxChars' : 10,
+	    'maxChars' : 20,
 	});
 	//设置填写事件对话框可拖动
 	$( "#add_staff_event" ).draggable({ containment: "parent" });
 	
 	$("#start-datetime").datetimepicker({
-                timeFormat: "HH:mm:ss",
-                dateFormat: "yy-mm-dd"
-            });
+	               timeFormat: "HH:mm:ss",
+	               dateFormat: "yy-mm-dd"
+	           });
 	$("#end-datetime").datetimepicker({
-                timeFormat: "HH:mm:ss",
-                dateFormat: "yy-mm-dd"
-            });
-    //初始化添加事件对话框
+	               timeFormat: "HH:mm:ss",
+	               dateFormat: "yy-mm-dd"
+	           });
+	   //初始化添加事件对话框
 	initStaffEventAddDialog();
-	</script>
+</script>
