add juhuasuan app and fix calendar and trade admin repull trade action

--- a/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
+++ b/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
@@ -317,7 +317,7 @@
 		         	'title':e.title+(e.is_finished?' √':''),
 		         	'start':e.start,
 		         	'end':e.end,
-		         	'allDay':true,
+		         	'allDay':false,
 		         	'creator':e.creator,
 		         	'executor':e.executor,
 		         };
