fix babylist and calendar

--- a/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
+++ b/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
@@ -272,7 +272,7 @@
 						<div id="tc-event-text" >正文内容</div>
 						<div id="tc-event-track">
 							<div class="actions-left">
-								<label class="label">创建:</label>
+								<label class="label">创建由:</label>
 								<div id="event-creator"></div>
 							</div>
 							<div class="actions-right">
