--- a/shopmanager/site_media/static/css/admin/dialog.css
+++ b/shopmanager/site_media/static/css/admin/dialog.css
@@ -87,6 +87,9 @@
   border-radius: 4px;
 }
 
+#trade_tag,#trade-regular{
+	display:inline;
+}
 .icon-tags, .icon-time {
   font-family: FontAwesome;
   font-weight: normal;
