--- a/shopmanager/templates/trades/review_order_template.html
+++ b/shopmanager/templates/trades/review_order_template.html
@@ -137,7 +137,7 @@
 					{% if trade.order_modify %}<li><span class="badge1 badge-warning1">订单修改</span></li>{% endif %} 
 					{% if trade.new_merge %}<li><span class="badge1 badge-warning1">新合单</span></li>{% endif %}
 					{% if trade.wait_merge %}<li><span class="badge1 badge-warning1">待合单</span></li>{% endif %}
-					{% if trade.addr_modify %}<li><span class="badge1 badge-warning1">修改地址</span></li>{% endif %}
+					{% if trade.addr_modify %}<li><span class="badge1 badge-warning1">修改快递或地址信息</span></li>{% endif %}
 					{% if trade.has_out_stock %}<li><span class="badge1 badge-warning1">缺货</span></li>{% endif %}
 				</ul>
 			</div>
