fix fullcalendar js and html

--- a/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
+++ b/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
@@ -225,18 +225,28 @@
 	
 	#event-creator{
 		display:inline;
+		overflow: hidden;
+		width:50px;
+	}
+	
+	#event-duration{
+		display:inline;
+		overflow: hidden;
+		width:300px;
 	}
 	
 	.actions-right{
 		float: right;
 	    margin: 0 1px;
 	    white-space: nowrap;
+	    display:inline;
 	}
 	
 	.actions-left{
 		float: left;
 	    margin: 0 1px;
 	    white-space: nowrap;
+	    display:inline;
 	}
 	
 </style>
