--- a/shopmanager/templates/trades/send_trade_reponse.html
+++ b/shopmanager/templates/trades/send_trade_reponse.html
@@ -66,7 +66,7 @@
 				    type: 'GET', 
 				    url: task_status_url, 
 				    dataType: 'json',
-				    success: callback,
+				    success: callback
 				});
 			};
 			
