fix trade response

--- a/shopmanager/templates/trades/send_trade_reponse.html
+++ b/shopmanager/templates/trades/send_trade_reponse.html
@@ -6,7 +6,7 @@
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script src="{{ STATIC_URL }}script/jquery-1.7.1.min.js"></script>
     <style type="text/css">
 		*{ margin:0; padding:0;}
 		body{
