fix trade admin and tasks and views and send trade reponse

--- a/shopmanager/templates/trades/send_trade_reponse.html
+++ b/shopmanager/templates/trades/send_trade_reponse.html
@@ -31,7 +31,7 @@
 		var task_status_url = $('#task-status').attr('src');
 		var max_timer = 20;
 		
-		var update_task_status = function(){
+		var update_task_status = function(e){
 		
 			var callback = function(data){
 				//try{
