--- a/shopmanager/templates/trades/send_trade_reponse.html
+++ b/shopmanager/templates/trades/send_trade_reponse.html
@@ -16,6 +16,16 @@
 			margin:200px auto;
 			width:300px;
 		}
+		button {
+			width:300px;
+			heigth:25px;
+		}
+		.label {
+			font-size:25px;
+			font-color:white;
+			height:25px;
+			
+		}
 	</style>
 </head>
 <body>
@@ -23,7 +33,7 @@
 		<input id="task_id" type="hidden" value="{{ task_id }}" />
 		<input id="replay_id" type="hidden" value="{{ replay_id }}" />
 		<button id="task-status" class="btn btn-large btn-success">
-			等待发货任务完成，倒计时<lable id="time-counter" class="lable">20</lable>秒
+			等待发货任务完成，倒计时<label id="task_counter_id" class="label label-info">20</label>秒
 		</button>
 	</div>
 	
@@ -39,7 +49,13 @@
 		var update_task_status = function(e){
 		
 			var callback = function(data){
-				//try{
+					
+				try{
+					if (data == ''||data.task=='undifine'){
+						clearInterval(interval_id);
+						alert(data);
+					}
+
 					if (data.task.status == 'SUCCESS'){
 						window.location = '/trades/replaysend/'+replay_id+'/';
 					}
@@ -51,7 +67,7 @@
 					else{
 						if (max_timer>0){
 							max_timer = max_timer-1;
-							$('#time-counter').text(max_timer+'');
+							$('#task_counter_id').text(max_timer+'');
 						}
 						else{
 							max_timer = max_timer-1;
@@ -60,11 +76,11 @@
 							clearInterval(interval_id);
 						}
 					}
-				/**}catch (err) {
+				}catch (err) {
 		            alert('ajax error:'+err);
-		        } */
+		        } 
 			}
-			$.get(task_status_url+max_timer,{},callback,'json');
+			$.get(task_status_url+max_timer.toString(),{},callback,'json');
 		}
 		
 		$('#task-status').click(update_task_status);
