--- a/shopmanager/templates/trades/trade_products_statistic.html
+++ b/shopmanager/templates/trades/trade_products_statistic.html
@@ -15,7 +15,7 @@
 			list-style:none; 
 			display:inline; 
 			float:left; 
-			margin-left:40px;  
+			margin-left:20px;  
 			margin-top:30px;
 		}
 		input{
@@ -53,6 +53,10 @@
 					<input type="text" name="outer_id" value="{{ object.outer_id }}"/>
 				</li>
 				<li>
+					<label class="control-label" for="wait_send">待发货:</label>
+					<input type="checkbox" name="wait_send" {% if object.wait_send %}checked{% endif %} />
+				</li>
+				<li>
 					<input type="submit" value="查询" class="btn btn-primary"/>
 				</li>
 			</ul>
@@ -60,7 +64,8 @@
 		</div>
 		<div id="post-items" style="display:block;">
 		  <fieldset>
-		  	<legend>订单商品统计列表(总成本:￥{{ object.total_cost }},总销售额:￥{{ object.total_sales }})</legend>
+		  	<legend>订单商品统计列表(总成本:￥{{ object.total_cost }},总销售额:￥{{ object.total_sales }}
+		  	,付款单数:{{ object.trade_nums }},购买人数:{{ object.buyer_nums }})</legend>
 			  <table class="table table-bordered  table-condensed">
 			    <tr>
 			      <th>商品编码</th><th style="width:150px;">商品名称</th><th>总数量</th><th>成本</th><th>销售额</th>
