fix direct trade template

--- a/shopmanager/templates/trades/direct_trade_template.html
+++ b/shopmanager/templates/trades/direct_trade_template.html
@@ -117,7 +117,7 @@
 						{% if trade.type == "direct" %}
 						<td>实付:</td><td><input type="text" id="id_payment" class="simple-text" /></td>
 						<td>邮费:</td><td><input type="text" id="id_post_fee" class="simple-text" /></td>
-						{% elif %}
+						{% else %}
 						<td colspan="4"></td>
 						{% endif %}
 					</tr>
