fix script trade js and order template

--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -83,9 +83,10 @@
 	{% if trade.has_refund %}<li><span class="badge1 badge-warning1">待退款</span></li>{% endif %} 
 	{% if trade.has_out_stock %}<li><span class="badge1 badge-warning1">缺货</span></li>{% endif %} 
 	{% if trade.has_rule_match %}<li><span class="badge1 badge-warning1">信息不全</span></li>{% endif %} 
-	{% if trade.has_merge %}<li><span class="badge1 badge-warning1">订单合并</span>{% endif %} 
-	{% if trade.need_manual_merge %}<li><span class="badge1 badge-warning1">需手动合单</span>{% endif %}
-	{% if trade.has_sys_err %}<li><span class="badge1 badge-warning1">系统错误</span>{% endif %}
+	{% if trade.has_merge %}<li><span class="badge1 badge-warning1">订单合并</span></li>{% endif %} 
+	{% if trade.need_manual_merge %}<li><span class="badge1 badge-warning1">需手动合单</span></li>{% endif %}
+	{% if trade.has_sys_err %}<li><span class="badge1 badge-warning1">系统错误</span></li>{% endif %}
+	{% if trade.is_force_wlb %}<li><span class="badge1 badge-warning1">物流宝</span></li>{% endif %}
 </ul>
 </div>
 <div class="accordion-group1">
