--- a/shopmanager/templates/trades/trade_products_statistic.html
+++ b/shopmanager/templates/trades/trade_products_statistic.html
@@ -6,9 +6,13 @@
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
+    <link href="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.css" type="text/css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+	<script src="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
+	<!-- <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery.ui.datepicker-zh-CN.js.js" type="text/javascript" charset="gb2312"></script> -->
+    <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery-ui-timepicker-zh-CN.js" type="text/javascript"></script> 
     <style type="text/css">
 		*{ margin:0; padding:0;}
 		ul li{ 
@@ -19,7 +23,7 @@
 			margin-top:30px;
 		}
 		input{
-			width:120px;
+			width:140px;
 		}
 		select{
 			width:120px;
@@ -110,8 +114,14 @@
 </body>
 <script type="text/javascript">
 	$(function() {
-		 $("#f_datepicker").datepicker({ dateFormat: "yy-mm-dd" });
-		 $("#t_datepicker").datepicker({ dateFormat: "yy-mm-dd" });
+		 $("#f_datepicker").datetimepicker({
+                timeFormat: "HH:mm:ss",
+                dateFormat: "yy-mm-dd"
+            });
+		 $("#t_datepicker").datetimepicker({
+                timeFormat: "HH:mm:ss",
+                dateFormat: "yy-mm-dd"
+            });
 	});
 </script>
 </html>
