fix trade admin and send trade workflow

--- a/shopmanager/templates/trades/base.html
+++ b/shopmanager/templates/trades/base.html
@@ -2,8 +2,8 @@
 
 
 {% block style %}
-<link href="{{ STATIC_URL }}css/trades.css" rel="stylesheet/less" type="text/css" />
-<link href="{{ STATIC_URL }}css/dialog.css" rel="stylesheet/less" type="text/css" />
+<link href="{{ STATIC_URL }}css/trades.css" rel="stylesheet" type="text/css" />
+<link href="{{ STATIC_URL }}css/dialog.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 
