--- a/shopmanager/templates/trades/repullsuccess.html
+++ b/shopmanager/templates/trades/repullsuccess.html
@@ -2,7 +2,7 @@
 
 {% block title%} 重新下单 {% endblock %}
 
-{% block navbar %}<div style="margin-top:30px;"><a href="{{ request.META.HTTP_REFERER }}" class="btn btn-large btn-success" target="_blank">打开上一页</a></div>{% endblock %}
+{% block navbar %}<div style="margin-top:30px;"><a href="{{ request.META.HTTP_REFERER }}" class="btn btn-large btn-success" >返回上一页</a></div>{% endblock %}
 
 {% block container %}
 <div class='list_top'>
