--- a/shopmanager/templates/trades/mergesuccess.html
+++ b/shopmanager/templates/trades/mergesuccess.html
@@ -3,7 +3,7 @@
 {% block title%} 审核 {% endblock %}
 
 {% block navbar %}<div style="margin-top:30px;">
-<a href="{{ request.META.HTTP_REFERER }}" class="btn btn-large btn-success" target="_blank">打开上一页</a>
+<a href="{{ request.META.HTTP_REFERER }}" class="btn btn-large btn-success" >返回上一页</a>
 </div>{% endblock %}
 
 {% block container %}
