--- a/shopmanager/templates/trades/trade_post_success.html
+++ b/shopmanager/templates/trades/trade_post_success.html
@@ -8,11 +8,11 @@
 <div class='list_top' style='width:800px;'>
 	<div>
 		<div>
-			<button e_id="post-status" class="btn btn-small btn-success fold">收起</button>
+			<button e_id="post-status" class="fold">收起</button>
 		</div>
 		<div id="post-status" style="display:block;">
 		  <fieldset>
-		  	<legend>发货订单状态(共{{ trades|length }}单)</legend>
+		  	<legend>发货订单状态（共{{ trades|length }}单,批次编号：{{ post_no }}）</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
 			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>快递名称</th><th>快递单号</th><th>发货状态</th>
@@ -51,14 +51,14 @@
 	</div>
 	<div>
 		<div>
-			<button e_id="post-items" class="btn btn-small btn-success fold">收起</button>
+			<button e_id="post-items" class="fold">收起</button>
 		</div>
 		<div id="post-items" style="display:block;">
 		  <fieldset>
-		  	<legend>发货商品列表</legend>
+		  	<legend>发货商品列表（批次编号：{{ post_no }}）</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
-			      <th>商品编码</th><th>商品名称</th><th>总数量</th><th>规格编码</th><th>商品规格</th><th>数量</th>
+			      <th>商品码</th><th style="width:200px;">商品名称</th><th>总数量</th><th>规格码</th><th>规格名</th><th>数量</th>
 			    </tr>
 			    {% for trade in trade_items %}
 				    {% with trade.1.skus|length as sku_len %}
