change python daemon to supervisord manage

--- a/shopmanager/templates/trades/send_trade_reponse.html
+++ b/shopmanager/templates/trades/send_trade_reponse.html
@@ -33,7 +33,7 @@
 		<input id="task_id" type="hidden" value="{{ task_id }}" />
 		<input id="replay_id" type="hidden" value="{{ replay_id }}" />
 		<button id="task-status" class="btn btn-large btn-success">
-			批次编号:{{ task_id }}。等待任务完成，倒计时<label id="task_counter_id" class="label label-info">100</label>秒
+			批次编号:{{ replay_id }}。等待任务完成，倒计时<label id="task_counter_id" class="label label-info">100</label>秒
 		</button>
 	</div>
 	
