fix purchase project purchase

--- a/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
+++ b/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
@@ -400,7 +400,7 @@
 		
 	});
 	//使输入的执行标记化
-	$('#executors').tagsInput({
+	$("#executors").tagsInput({
 		'autocomplete_url': '/users/username/',
 	    'autocomplete': {selectFirst:true,autoFill:true},
 		'height':'100px',
@@ -413,7 +413,7 @@
 	    'maxChars' : 20,
 	});
 	//设置填写事件对话框可拖动
-	$( "#add_staff_event" ).draggable({ containment: "parent" });
+	$("#add_staff_event").draggable({ containment: "parent" });
 	
 	$("#start-datetime").datetimepicker({
 	               timeFormat: "HH:mm:ss",
