--- a/shopmanager/templates/purchases/purchase_storage_page.html
+++ b/shopmanager/templates/purchases/purchase_storage_page.html
@@ -338,9 +338,9 @@
 	</div>
 </body>
 {% endwith %}
-<script src="{{ STATIC_URL }}script/base.js"></script>
 <script src="{{ STATIC_URL }}script/purchase/purchase.js"></script>
 <script type="text/javascript">
-	new purchase.Manager();
+	new purchasestorage.Manager();
+	
 </script>
 </html>
